<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"

    tools:context=".MainActivity"
    android:weightSum="1"
    android:background="#828c8f67"
    android:padding="5dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/HeadView"
        android:background="#828c8f67"
        android:src="@drawable/head"
        android:layout_weight="0.001"
        android:baselineAlignBottom="false"
        android:adjustViewBounds="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1.01"
        android:id="@+id/listView"
        android:layout_margin="10dp"
        android:background="#828c8f67"
        android:smoothScrollbar="false" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.001"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:background="#828c8f67">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/name1_tv"
            android:id="@+id/Name"
            android:layout_weight="0.5"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_margin="1dp"
            android:background="#828c8f67" />
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/paid_textView"
                android:id="@+id/Paid"
                android:layout_weight="0.5"
                android:textStyle="bold"
                android:gravity="center"
                android:layout_margin="1dp"
                android:background="#828c8f67" />




        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1">
            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/Addname"
                android:layout_weight="1"
                android:gravity="center"

                android:layout_margin="1dp"
                android:background="#828c8f67" />

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/Addcosts"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:layout_margin="1dp"
                android:background="#828c8f67" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.03"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:background="#828c8f67">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/Reset_Button"
            android:id="@+id/resButton"
            android:textStyle="bold"
            android:textSize="@dimen/abc_action_bar_icon_vertical_padding_material"
            android:background="#bf888b65"
            android:onClick="reset"
            android:layout_weight="0.8" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/add_btn"
            android:layout_weight="0.2"
            android:id="@+id/calculateButton"

            android:onClick="calculate"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="#a18c8f67" />

    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        android:layout_gravity="center_horizontal"
        android:weightSum="1"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="#828c8f67">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/b_btn"
            android:id="@+id/btn_b"
            android:background="#a18c8f67"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="testapp" />

        <TextView
            android:layout_width="135dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/left_textView"
            android:id="@+id/Left"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:layout_width="184dp"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/ResultText"
            android:textStyle="bold"
            android:inputType="numberDecimal"
            android:gravity="center" />
    </LinearLayout>

</LinearLayout>
